# clang_template

./: Dockerfile
.github/workflows/: clang_format.yaml  docker-image.yml
app/: CMakeLists.txt  build.sh  clang.conan
app/src/: main.cpp
app/tests/: test_stdcpp.cpp  tests.cmake
